test/visibility/errors/issue-21289-1b.future
bug: internal error when accessing a FCF as though it was a field
